quiche_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
// 
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

class NativeLibrary{
/// Holds the Dynamic library.
final ffi.DynamicLibrary _dylib;

/// The symbols are looked up in [dynamicLibrary].
NativeLibrary(ffi.DynamicLibrary dynamicLibrary): _dylib = dynamicLibrary;

int quiche_enable_debug_logging(
  ffi.Pointer<ffi.NativeFunction<_typedefC_1>> cb,
  ffi.Pointer<ffi.Void> argp,
) {
_quiche_enable_debug_logging ??= _dylib.lookupFunction<_c_quiche_enable_debug_logging,_dart_quiche_enable_debug_logging>('quiche_enable_debug_logging');
  return _quiche_enable_debug_logging(
    cb,
    argp,
  );
}
_dart_quiche_enable_debug_logging _quiche_enable_debug_logging;

int quiche_config_load_cert_chain_from_pem_file(
  ffi.Pointer<Config> config,
  ffi.Pointer<ffi.Int8> path,
) {
_quiche_config_load_cert_chain_from_pem_file ??= _dylib.lookupFunction<_c_quiche_config_load_cert_chain_from_pem_file,_dart_quiche_config_load_cert_chain_from_pem_file>('quiche_config_load_cert_chain_from_pem_file');
  return _quiche_config_load_cert_chain_from_pem_file(
    config,
    path,
  );
}
_dart_quiche_config_load_cert_chain_from_pem_file _quiche_config_load_cert_chain_from_pem_file;

int quiche_config_load_priv_key_from_pem_file(
  ffi.Pointer<Config> config,
  ffi.Pointer<ffi.Int8> path,
) {
_quiche_config_load_priv_key_from_pem_file ??= _dylib.lookupFunction<_c_quiche_config_load_priv_key_from_pem_file,_dart_quiche_config_load_priv_key_from_pem_file>('quiche_config_load_priv_key_from_pem_file');
  return _quiche_config_load_priv_key_from_pem_file(
    config,
    path,
  );
}
_dart_quiche_config_load_priv_key_from_pem_file _quiche_config_load_priv_key_from_pem_file;

void quiche_config_verify_peer(
  ffi.Pointer<Config> config,
  int v,
) {
_quiche_config_verify_peer ??= _dylib.lookupFunction<_c_quiche_config_verify_peer,_dart_quiche_config_verify_peer>('quiche_config_verify_peer');
  return _quiche_config_verify_peer(
    config,
    v,
  );
}
_dart_quiche_config_verify_peer _quiche_config_verify_peer;

void quiche_config_grease(
  ffi.Pointer<Config> config,
  int v,
) {
_quiche_config_grease ??= _dylib.lookupFunction<_c_quiche_config_grease,_dart_quiche_config_grease>('quiche_config_grease');
  return _quiche_config_grease(
    config,
    v,
  );
}
_dart_quiche_config_grease _quiche_config_grease;

void quiche_config_log_keys(
  ffi.Pointer<Config> config,
) {
_quiche_config_log_keys ??= _dylib.lookupFunction<_c_quiche_config_log_keys,_dart_quiche_config_log_keys>('quiche_config_log_keys');
  return _quiche_config_log_keys(
    config,
  );
}
_dart_quiche_config_log_keys _quiche_config_log_keys;

void quiche_config_enable_early_data(
  ffi.Pointer<Config> config,
) {
_quiche_config_enable_early_data ??= _dylib.lookupFunction<_c_quiche_config_enable_early_data,_dart_quiche_config_enable_early_data>('quiche_config_enable_early_data');
  return _quiche_config_enable_early_data(
    config,
  );
}
_dart_quiche_config_enable_early_data _quiche_config_enable_early_data;

int quiche_config_set_application_protos(
  ffi.Pointer<Config> config,
  ffi.Pointer<ffi.Uint8> protos,
  int protos_len,
) {
_quiche_config_set_application_protos ??= _dylib.lookupFunction<_c_quiche_config_set_application_protos,_dart_quiche_config_set_application_protos>('quiche_config_set_application_protos');
  return _quiche_config_set_application_protos(
    config,
    protos,
    protos_len,
  );
}
_dart_quiche_config_set_application_protos _quiche_config_set_application_protos;

void quiche_config_set_max_idle_timeout(
  ffi.Pointer<Config> config,
  int v,
) {
_quiche_config_set_max_idle_timeout ??= _dylib.lookupFunction<_c_quiche_config_set_max_idle_timeout,_dart_quiche_config_set_max_idle_timeout>('quiche_config_set_max_idle_timeout');
  return _quiche_config_set_max_idle_timeout(
    config,
    v,
  );
}
_dart_quiche_config_set_max_idle_timeout _quiche_config_set_max_idle_timeout;

void quiche_config_set_max_packet_size(
  ffi.Pointer<Config> config,
  int v,
) {
_quiche_config_set_max_packet_size ??= _dylib.lookupFunction<_c_quiche_config_set_max_packet_size,_dart_quiche_config_set_max_packet_size>('quiche_config_set_max_packet_size');
  return _quiche_config_set_max_packet_size(
    config,
    v,
  );
}
_dart_quiche_config_set_max_packet_size _quiche_config_set_max_packet_size;

void quiche_config_set_initial_max_data(
  ffi.Pointer<Config> config,
  int v,
) {
_quiche_config_set_initial_max_data ??= _dylib.lookupFunction<_c_quiche_config_set_initial_max_data,_dart_quiche_config_set_initial_max_data>('quiche_config_set_initial_max_data');
  return _quiche_config_set_initial_max_data(
    config,
    v,
  );
}
_dart_quiche_config_set_initial_max_data _quiche_config_set_initial_max_data;

void quiche_config_set_initial_max_stream_data_bidi_local(
  ffi.Pointer<Config> config,
  int v,
) {
_quiche_config_set_initial_max_stream_data_bidi_local ??= _dylib.lookupFunction<_c_quiche_config_set_initial_max_stream_data_bidi_local,_dart_quiche_config_set_initial_max_stream_data_bidi_local>('quiche_config_set_initial_max_stream_data_bidi_local');
  return _quiche_config_set_initial_max_stream_data_bidi_local(
    config,
    v,
  );
}
_dart_quiche_config_set_initial_max_stream_data_bidi_local _quiche_config_set_initial_max_stream_data_bidi_local;

void quiche_config_set_initial_max_stream_data_bidi_remote(
  ffi.Pointer<Config> config,
  int v,
) {
_quiche_config_set_initial_max_stream_data_bidi_remote ??= _dylib.lookupFunction<_c_quiche_config_set_initial_max_stream_data_bidi_remote,_dart_quiche_config_set_initial_max_stream_data_bidi_remote>('quiche_config_set_initial_max_stream_data_bidi_remote');
  return _quiche_config_set_initial_max_stream_data_bidi_remote(
    config,
    v,
  );
}
_dart_quiche_config_set_initial_max_stream_data_bidi_remote _quiche_config_set_initial_max_stream_data_bidi_remote;

void quiche_config_set_initial_max_stream_data_uni(
  ffi.Pointer<Config> config,
  int v,
) {
_quiche_config_set_initial_max_stream_data_uni ??= _dylib.lookupFunction<_c_quiche_config_set_initial_max_stream_data_uni,_dart_quiche_config_set_initial_max_stream_data_uni>('quiche_config_set_initial_max_stream_data_uni');
  return _quiche_config_set_initial_max_stream_data_uni(
    config,
    v,
  );
}
_dart_quiche_config_set_initial_max_stream_data_uni _quiche_config_set_initial_max_stream_data_uni;

void quiche_config_set_initial_max_streams_bidi(
  ffi.Pointer<Config> config,
  int v,
) {
_quiche_config_set_initial_max_streams_bidi ??= _dylib.lookupFunction<_c_quiche_config_set_initial_max_streams_bidi,_dart_quiche_config_set_initial_max_streams_bidi>('quiche_config_set_initial_max_streams_bidi');
  return _quiche_config_set_initial_max_streams_bidi(
    config,
    v,
  );
}
_dart_quiche_config_set_initial_max_streams_bidi _quiche_config_set_initial_max_streams_bidi;

void quiche_config_set_initial_max_streams_uni(
  ffi.Pointer<Config> config,
  int v,
) {
_quiche_config_set_initial_max_streams_uni ??= _dylib.lookupFunction<_c_quiche_config_set_initial_max_streams_uni,_dart_quiche_config_set_initial_max_streams_uni>('quiche_config_set_initial_max_streams_uni');
  return _quiche_config_set_initial_max_streams_uni(
    config,
    v,
  );
}
_dart_quiche_config_set_initial_max_streams_uni _quiche_config_set_initial_max_streams_uni;

void quiche_config_set_ack_delay_exponent(
  ffi.Pointer<Config> config,
  int v,
) {
_quiche_config_set_ack_delay_exponent ??= _dylib.lookupFunction<_c_quiche_config_set_ack_delay_exponent,_dart_quiche_config_set_ack_delay_exponent>('quiche_config_set_ack_delay_exponent');
  return _quiche_config_set_ack_delay_exponent(
    config,
    v,
  );
}
_dart_quiche_config_set_ack_delay_exponent _quiche_config_set_ack_delay_exponent;

void quiche_config_set_max_ack_delay(
  ffi.Pointer<Config> config,
  int v,
) {
_quiche_config_set_max_ack_delay ??= _dylib.lookupFunction<_c_quiche_config_set_max_ack_delay,_dart_quiche_config_set_max_ack_delay>('quiche_config_set_max_ack_delay');
  return _quiche_config_set_max_ack_delay(
    config,
    v,
  );
}
_dart_quiche_config_set_max_ack_delay _quiche_config_set_max_ack_delay;

void quiche_config_set_disable_active_migration(
  ffi.Pointer<Config> config,
  int v,
) {
_quiche_config_set_disable_active_migration ??= _dylib.lookupFunction<_c_quiche_config_set_disable_active_migration,_dart_quiche_config_set_disable_active_migration>('quiche_config_set_disable_active_migration');
  return _quiche_config_set_disable_active_migration(
    config,
    v,
  );
}
_dart_quiche_config_set_disable_active_migration _quiche_config_set_disable_active_migration;

void quiche_config_set_cc_algorithm(
  ffi.Pointer<Config> config,
  int algo,
) {
_quiche_config_set_cc_algorithm ??= _dylib.lookupFunction<_c_quiche_config_set_cc_algorithm,_dart_quiche_config_set_cc_algorithm>('quiche_config_set_cc_algorithm');
  return _quiche_config_set_cc_algorithm(
    config,
    algo,
  );
}
_dart_quiche_config_set_cc_algorithm _quiche_config_set_cc_algorithm;

void quiche_config_free(
  ffi.Pointer<Config> config,
) {
_quiche_config_free ??= _dylib.lookupFunction<_c_quiche_config_free,_dart_quiche_config_free>('quiche_config_free');
  return _quiche_config_free(
    config,
  );
}
_dart_quiche_config_free _quiche_config_free;

int quiche_header_info(
  ffi.Pointer<ffi.Uint8> buf,
  int buf_len,
  int dcil,
  ffi.Pointer<ffi.Uint32> version,
  ffi.Pointer<ffi.Uint8> type,
  ffi.Pointer<ffi.Uint8> scid,
  ffi.Pointer<ffi.Int32> scid_len,
  ffi.Pointer<ffi.Uint8> dcid,
  ffi.Pointer<ffi.Int32> dcid_len,
  ffi.Pointer<ffi.Uint8> token,
  ffi.Pointer<ffi.Int32> token_len,
) {
_quiche_header_info ??= _dylib.lookupFunction<_c_quiche_header_info,_dart_quiche_header_info>('quiche_header_info');
  return _quiche_header_info(
    buf,
    buf_len,
    dcil,
    version,
    type,
    scid,
    scid_len,
    dcid,
    dcid_len,
    token,
    token_len,
  );
}
_dart_quiche_header_info _quiche_header_info;

ffi.Pointer<Connection> quiche_accept(
  ffi.Pointer<ffi.Uint8> scid,
  int scid_len,
  ffi.Pointer<ffi.Uint8> odcid,
  int odcid_len,
  ffi.Pointer<Config> config,
) {
_quiche_accept ??= _dylib.lookupFunction<_c_quiche_accept,_dart_quiche_accept>('quiche_accept');
  return _quiche_accept(
    scid,
    scid_len,
    odcid,
    odcid_len,
    config,
  );
}
_dart_quiche_accept _quiche_accept;

ffi.Pointer<Connection> quiche_connect(
  ffi.Pointer<ffi.Int8> server_name,
  ffi.Pointer<ffi.Uint8> scid,
  int scid_len,
  ffi.Pointer<Config> config,
) {
_quiche_connect ??= _dylib.lookupFunction<_c_quiche_connect,_dart_quiche_connect>('quiche_connect');
  return _quiche_connect(
    server_name,
    scid,
    scid_len,
    config,
  );
}
_dart_quiche_connect _quiche_connect;

int quiche_negotiate_version(
  ffi.Pointer<ffi.Uint8> scid,
  int scid_len,
  ffi.Pointer<ffi.Uint8> dcid,
  int dcid_len,
  ffi.Pointer<ffi.Uint8> out,
  int out_len,
) {
_quiche_negotiate_version ??= _dylib.lookupFunction<_c_quiche_negotiate_version,_dart_quiche_negotiate_version>('quiche_negotiate_version');
  return _quiche_negotiate_version(
    scid,
    scid_len,
    dcid,
    dcid_len,
    out,
    out_len,
  );
}
_dart_quiche_negotiate_version _quiche_negotiate_version;

int quiche_retry(
  ffi.Pointer<ffi.Uint8> scid,
  int scid_len,
  ffi.Pointer<ffi.Uint8> dcid,
  int dcid_len,
  ffi.Pointer<ffi.Uint8> new_scid,
  int new_scid_len,
  ffi.Pointer<ffi.Uint8> token,
  int token_len,
  ffi.Pointer<ffi.Uint8> out,
  int out_len,
) {
_quiche_retry ??= _dylib.lookupFunction<_c_quiche_retry,_dart_quiche_retry>('quiche_retry');
  return _quiche_retry(
    scid,
    scid_len,
    dcid,
    dcid_len,
    new_scid,
    new_scid_len,
    token,
    token_len,
    out,
    out_len,
  );
}
_dart_quiche_retry _quiche_retry;
